# FinalProjectCV

./: CMakeLists.txt  TrackbarsManager.cpp  TrackbarsManager.h  main.cpp  peopleCounter.cpp  peopleCounter.h
